force-app/main/default/objects/Client_Sso_Routing__mdt/Client_Sso_Routing__mdt.object-meta.xml
<CustomObject>
    <label>Client SSO Routing</label>
    <pluralLabel>Client SSO Routings</pluralLabel>
    <description>Maps marker permission sets to SAML Single Sign-On Setting API names for email-first login routing.</description>
</CustomObject>