force-app/main/default/objects/Client_Sso_Routing__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <description>When false, this routing row is ignored.</description>
    <type>Checkbox</type>
</CustomField>