force-app/main/default/objects/Client_Sso_Routing__mdt/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Name__c</fullName>
    <label>Permission Set Name</label>
    <description>API name of the marker permission set assigned to users who should use this SAML route.</description>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>