force-app/main/default/objects/Client_Sso_Routing__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <description>Higher number wins when multiple marker permission sets match.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>