force-app/main/default/objects/Client_Sso_Routing__mdt/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <label>Protocol</label>
    <description>Authentication protocol for this row. v1 supports SAML only.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAML</fullName>
                <default>true</default>
                <label>SAML</label>
            </value>
            <value>
                <fullName>OIDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>