force-app/main/default/objects/Client_Sso_Routing__mdt/fields/Saml_Setting_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Saml_Setting_Api_Name__c</fullName>
    <label>SAML Setting API Name</label>
    <description>DeveloperName of the Single Sign-On Setting (SAML) row in Setup for this org.</description>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>