force-app/main/default/objects/Client_Sso_Routing__mdt/fields/Saml_Sso_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Saml_Sso_Config_Id__c</fullName>
    <label>SAML SSO Config Id</label>
    <description>Optional 15- or 18-character Salesforce Id of the SamlSsoConfig row. When set, discover uses this Id with Auth.AuthConfiguration.getSamlSsoUrl and skips querying SamlSsoConfig by DeveloperName — required for Experience Guest because Guest users typically cannot read SamlSsoConfig. Leave blank only if the runtime user can query SamlSsoConfig (unusual for community login).</description>
    <type>Text</type>
    <length>18</length>
</CustomField>